--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3-transform": "^2.10.3",
     "sharp": "^0.33.5",
     "stripe": "^14.18.0",
+    "uuid": "^11.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
