--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ uploads/
 blurred/
 photos/
 original/
-node_modules/
+node_modules/w
 public/
+.env
 .env.local
 .env.development.local
 .env.test.local
