--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-form-data": "^2.0.23",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3-transform": "^2.10.3",
     "sharp": "^0.33.5",
     "stripe": "^14.18.0",
     "uuid": "^11.1.0",
@@ -28,7 +27,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.9",
     "supertest": "^6.3.4"
   }
 }
