--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Connection
-MONGODB_URI=mongodb+srv://fastleopard9372:7xK7OsfmzqCJbdMr@cluster0.wzdzg.mongodb.net/model-donation-platform?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://fastleopard9372:7xK7OsfmzqCJbdMr@cluster0.wzdzg.mongodb.net/book-babes-database?retryWrites=true&w=majority
 # JWT Authentication
 JWT_SECRET=sjdfowejf023^@0-14u2892h3rh
 JWT_EXPIRE=30d
