--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-
+    "raw-body": "^3.0.0",
+    "sharp": "^0.34.0",
     "stripe": "^14.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.11.0"
