--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.10.0",
     "raw-body": "^3.0.0",
     "sharp": "^0.34.0",
+    "socket.io": "^4.8.1",
     "stripe": "^14.18.0",
     "uuid": "^11.1.0",
     "winston": "^3.11.0"
