--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ JWT_SECRET=sjdfowejf023^@0-14u2892h3rh
 JWT_EXPIRE=30d
 
 EMAIL_FROM_NAME=Book Babes
-EMAIL_FROM_ADDRESS=rpa0621@gmail.com
+EMAIL_FROM_ADDRESS=donations@booktopiabookclub.org
 SMTP_HOST=mail.booktopiabookclub.org
 SMTP_PORT=587
 SMTP_USER=donations@booktopiabookclub.org
